[project]
name = "multimodal-rag-system"
version = "0.1.0"
description = "Multi-model RAG system for document processing"
authors = [
    {name = "vamsikumargudala",email = "vamsikumar196@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "chromadb (>=1.0.15,<2.0.0)",
    "openai (>=1.98.0,<2.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "boto3 (>=1.40.1,<2.0.0)",
    "botocore (>=1.40.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.1"
pre-commit = "^4.2.0"
jupyter = "^1.1.1"
ipykernel = "^6.30.0"
