[tool.poetry]
name = "multimodal-rag-system"
version = "0.1.0"
description = "Multi-modal RAG system for document processing"
authors = ["vamsikumargudala <vamsikumar196@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = ">=0.2.0,<0.2.10"
langchain-openai = ">=0.1.10,<0.1.20"
chromadb = "^0.4.24"
openai = "^1.35.0"
sentence-transformers = "^2.7.0"
pypdf = "^4.2.0"
python-docx = "^1.1.0"
python-multipart = "^0.0.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
streamlit = "^1.35.0"
boto3 = "^1.34.144"
botocore = "^1.34.144"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
requests = "^2.32.3"
plotly = "^5.22.0"
loguru = "^0.7.2"
rich = "^13.7.1"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.6.0"
jupyter = "^1.0.0"
ipykernel = "^6.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["chromadb.*", "sentence_transformers.*", "plotly.*"]
ignore_missing_imports = true
